Starting page setting added (WIP)

--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -948,7 +948,15 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         </trans-unit>
         <trans-unit id="TimelineSupportTitle.Text" translate="yes" xml:space="preserve">
           <source>Log activities in the Timeline</source>
-          <target state="new">Log activities in the Timeline</target>
+          <target state="translated">Registra attività nella Timeline</target>
+        </trans-unit>
+        <trans-unit id="RestartFailedBody" translate="yes" xml:space="preserve">
+          <source>Windows didn't allow the app to restart, try closing it manually</source>
+          <target state="translated">Windows non ha permesso il riavvio, prova a chiudere l'app manualmente</target>
+        </trans-unit>
+        <trans-unit id="RestartFailedTitle" translate="yes" xml:space="preserve">
+          <source>Restart failed</source>
+          <target state="translated">Riavvio fallito</target>
         </trans-unit>
       </group>
     </body>
