--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -723,4 +723,10 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="TimelineSupportTitle.Text" xml:space="preserve">
     <value>Registra attività nella Timeline</value>
   </data>
+  <data name="AlreadyLoadedBody" xml:space="preserve">
+    <value>Il codice richiesto è lo stesso già presente nell'IDE</value>
+  </data>
+  <data name="AlreadyLoadedTitle" xml:space="preserve">
+    <value>Codice già caricato</value>
+  </data>
 </root>
