--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -834,4 +834,7 @@ This way he'll be able to help you!</value>
   <data name="AlreadyLoadedTitle" xml:space="preserve">
     <value>Already loaded</value>
   </data>
+  <data name="ErrorRun.Text" xml:space="preserve">
+    <value>Error</value>
+  </data>
 </root>
