--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -729,4 +729,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="AlreadyLoadedTitle" xml:space="preserve">
     <value>Codice già caricato</value>
   </data>
+  <data name="ErrorRun.Text" xml:space="preserve">
+    <value>Errore</value>
+  </data>
 </root>
