--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -230,22 +230,12 @@
   <data name="ErrorType" xml:space="preserve">
     <value>Error type</value>
   </data>
-  <data name="Loops" xml:space="preserve">
-    <value>nested loops</value>
-    <comment>This will be "n nested loops"</comment>
-  </data>
   <data name="MemoryCells" xml:space="preserve">
     <value>memory cells</value>
-  </data>
-  <data name="NoLoops" xml:space="preserve">
-    <value>No nested loops</value>
   </data>
   <data name="Position" xml:space="preserve">
     <value>Position</value>
     <comment>The position of a wrong operator in a source code</comment>
-  </data>
-  <data name="SingleLoop" xml:space="preserve">
-    <value>1 nested loop</value>
   </data>
   <data name="SourceCode" xml:space="preserve">
     <value>Source code</value>
@@ -836,5 +826,11 @@ This way he'll be able to help you!</value>
   </data>
   <data name="ErrorRun.Text" xml:space="preserve">
     <value>Error</value>
+  </data>
+  <data name="MoreStackFrames" xml:space="preserve">
+    <value>stack frames</value>
+  </data>
+  <data name="OneStackFrame" xml:space="preserve">
+    <value>1 stack frame</value>
   </data>
 </root>
