Added code autorun setting (WIP)

--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -576,9 +576,6 @@ This way he'll be able to help you!</value>
   <data name="LowercaseAvailableSettings" xml:space="preserve">
     <value>available settings</value>
   </data>
-  <data name="LowercaseSingleAvailableSettings" xml:space="preserve">
-    <value>available setting</value>
-  </data>
   <data name="ThemesPackLocked" xml:space="preserve">
     <value>themes pack locked</value>
   </data>
@@ -850,5 +847,8 @@ This way he'll be able to help you!</value>
   </data>
   <data name="ProtectUnsavedChanges.Text" xml:space="preserve">
     <value>Protect unsaved changes</value>
+  </data>
+  <data name="AutorunCodeInBackground.Text" xml:space="preserve">
+    <value>Autorun code in the background</value>
   </data>
 </root>
