--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -887,4 +887,22 @@ This way he'll be able to help you!</value>
   <data name="GuideShortcutsDebug2.Description" xml:space="preserve">
     <value>Continues and ingores following breakpoints</value>
   </data>
+  <data name="CopyButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Copy</value>
+  </data>
+  <data name="CutButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Cut</value>
+  </data>
+  <data name="PasteButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Paste</value>
+  </data>
+  <data name="SnippetDuplicateValue" xml:space="preserve">
+    <value>Duplicate value</value>
+  </data>
+  <data name="SnippetInlineLoop" xml:space="preserve">
+    <value>Inline loop</value>
+  </data>
+  <data name="SnippetResetCell" xml:space="preserve">
+    <value>Reset cell</value>
+  </data>
 </root>
