--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -800,4 +800,7 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="SnippetResetCell" xml:space="preserve">
     <value>Resetta cella</value>
   </data>
+  <data name="ED2D332A-1735-4DD9-A909-59F1587AA17F" xml:space="preserve">
+    <value>Divisione intera</value>
+  </data>
 </root>
