--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -53,10 +53,6 @@
           <source>Time threshold exceeded</source>
           <target state="translated">Limite di tempo superato</target>
         </trans-unit>
-        <trans-unit id="WrongBrackets" translate="yes" xml:space="preserve">
-          <source>Mismatched parentheses</source>
-          <target state="translated">Parentesi non corrispondenti</target>
-        </trans-unit>
         <trans-unit id="run" translate="yes" xml:space="preserve">
           <source>run</source>
           <target state="translated">esegui</target>
@@ -73,10 +69,6 @@
         <trans-unit id="InternalError" translate="yes" xml:space="preserve">
           <source>error</source>
           <target state="translated">errore</target>
-        </trans-unit>
-        <trans-unit id="SyntaxError" translate="yes" xml:space="preserve">
-          <source>syntax error</source>
-          <target state="translated">errore sintassi</target>
         </trans-unit>
         <trans-unit id="Threshold" translate="yes" xml:space="preserve">
           <source>runtime error</source>
@@ -1056,6 +1048,10 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
         <trans-unit id="ED2D332A-1735-4DD9-A909-59F1587AA17F" translate="yes" xml:space="preserve">
           <source>Integer division</source>
           <target state="translated">Divisione intera</target>
+        </trans-unit>
+        <trans-unit id="SyntaxError" translate="yes" xml:space="preserve">
+          <source>Syntax error</source>
+          <target state="translated">Errore di sintassi</target>
         </trans-unit>
       </group>
     </body>
