--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -586,9 +586,6 @@ This way he'll be able to help you!</value>
   <data name="LowercaseAvailableSettings" xml:space="preserve">
     <value>available settings</value>
   </data>
-  <data name="LowercaseSingleAvailableSettings" xml:space="preserve">
-    <value>available setting</value>
-  </data>
   <data name="ThemesPackLocked" xml:space="preserve">
     <value>themes pack locked</value>
   </data>
@@ -836,5 +833,8 @@ This way he'll be able to help you!</value>
   </data>
   <data name="ErrorRun" xml:space="preserve">
     <value>Error</value>
+  </data>
+  <data name="NoCodeInterpreted" xml:space="preserve">
+    <value>No code interpreted</value>
   </data>
 </root>
