--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -460,9 +460,6 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   <data name="LowercaseAvailableSettings" xml:space="preserve">
     <value>impostazioni disponibili</value>
   </data>
-  <data name="LowercaseSingleAvailableSettings" xml:space="preserve">
-    <value>impostazione disponibile</value>
-  </data>
   <data name="ThemesPackLocked" xml:space="preserve">
     <value>pacchetto temi bloccato</value>
   </data>
@@ -731,5 +728,8 @@ In questo modo sarà più facile aiutarti e potrai contribuire a rendere l'app a
   </data>
   <data name="ErrorRun" xml:space="preserve">
     <value>Errore</value>
+  </data>
+  <data name="NoCodeInterpreted" xml:space="preserve">
+    <value>Nessun operatore presente</value>
   </data>
 </root>
